looking at, if that page isn't already in your address book. Likewise, I use
the Google Social Graph to find out more urls from someone once I have one URL
for them. So if your homepage links to your flickr page, and only your
homepage is in my address book, I'll still see your flickr photos when I visit
your home page, and I'll see you if I visit your flickr page. Magic.

The Google Social stuff is off by default - there are two preferences for
turning it on. This is because it's a privacy _nightmare_ - it sends every URL
you visit, and every URL belonging to anyone you IM with, to Google.

There are now some trivial preferences for how you want Shelf to display -
the old default behaviours of 'always come to the foreground when I have something to tell you' and 'window is always on top if there is context' are now options.

#### Known bugs

The Dopplr module is currently broken, due to the odd SSL certificate Dopplr
use. Sorry. Working on it.

The RSS feed fetcher shares a cookie store with Safari. This may or may not
be a bug or a feature, depending on your point of view. Anyone care?

#### Technical changes:

Converted build process to use py2app rather than xcode, because I know how to
make py2app dance to my tunes. Specifically, I know how to make it pull in
external libraries and bundle them properly. Reorganised source files into
folders so I can keep track of where things are.

_Huge_ great internal re-write. Many more code-paths are now much more
message-passing based, and can do things in the background. The Google Social
stuff uses this, so no longer blocks the foreground thread.

### 0.0.12 (in development)

Added many docs to the source code.

Shelf now sends a proper User-Agent to remote servers when fetching feeds.

Removed the xmltramp library, using simplejson to parse the Dopplr API files
instead.

Messed with the flickr photo display style to include titles, and have smaller thumbnails. I think I prefer this way.