@@ -55,8 +55,10 @@ The Google Social stuff is off by default - there are two preferences for
 turning it on. This is because it's a privacy _nightmare_ - it sends every URL
 you visit, and every URL belonging to anyone you IM with, to Google.
 
-There are now some trivial preferences for how you want Shelf to display -
-the old default behaviours of 'always come to the foreground when I have something to tell you' and 'window is always on top if there is context' are now options.
+There are now some trivial preferences for how you want Shelf to display - the
+old default behaviours of 'always come to the foreground when I have something
+to tell you' and 'window is always on top if there is context' are now
+options.
 
 #### Known bugs
 
@@ -86,4 +88,9 @@ Shelf now sends a proper User-Agent to remote servers when fetching feeds.
 Removed the xmltramp library, using simplejson to parse the Dopplr API files
 instead.
 
-Messed with the flickr photo display style to include titles, and have smaller thumbnails. I think I prefer this way.
+Messed with the flickr photo display style to include titles, and have smaller
+thumbnails. I think I prefer this way.
+
+Feeds in the display are now ordered with the most recently updated feed at
+the top of the list. 'Special' feeds (twitter, flickr) are still ordered above
+all others.
